# lightrag-mcp-server

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AIRGAP_DEPLOYMENT.md  CHANGELOG.md  Dockerfile  Dockerfile.lightrag  IMPLEMENTATION_COMPLETE.md  INTEGRATION_TEST_GUIDE.md  PROMPT3_COMPLETION.md  PROMPTS_4-5_COMPLETION.md  PROMPTS_6-10_COMPLETION.md  README-OFFLINE.md  README.md  RHEL9_SETUP.md  STATUS.md  create-offline-bundle.sh  docker-compose.yml  install-offline.sh  jest.config.js  package-lock.json  package.json  system-requirements.txt  tsconfig.json  tsconfig.test.json  verify-setup.sh
.github/workflows/: ci.yml  integration-test-milvus.yml  release.yml  release.yml.bak
docs/: ARCHITECTURE.md  CASCADING_PROMPTS.md  COMPARISON_WITH_LIGHTRAG_MCP.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  HTTP_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MIGRATION_SUMMARY.md  README.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  VSCODE_FEATURES.md
python/: lightrag_wrapper.py  pyproject.toml  requirements.txt  setup.py  test_wrapper.py
src/: index.ts  lightrag-bridge.ts  lightrag-http-client.ts  types.ts
tests/: setup.ts
tests/fixtures/sample-codebase/: keymanager_sample.cpp  keymanager_sample.h
tests/integration/: advanced-workflow.test.ts  complete-workflow.test.ts
tests/integration/full_milvus_test/: .gitignore  IMPLEMENTATION_SUMMARY.md  MANUAL_TEST_RESULTS.md  MOCK_IMPROVEMENTS.md  README.md  conftest.py  setup_test_env.sh  test_full_integration.py
tests/unit/: advanced-tools.integration-style.test.ts.bak  advanced-tools.test.ts  bridge.test.ts
(+9 files in other folders)
